<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudodu</string>
    <string name="action_settings">Settings</string>
    
    <string name="main_title">Android Sudoku</string>
    <string name="continue_lable">Continue</string>
    <string name="new_game_lable">New Game</string>
    <string name="about_lable">About</string>
	<string name="exit_lable">Exit</string>
	<string name="about_title">About Android Sudoku</string>

	<string name="about_text">\ 
	    Sudoku is a logic-based number placement puzzle. 
	    Starting with a partially completed 9x9 grid, the 
	    objective is to fill the grid so each of the 3x3 boxes 
	    (also called <i>block</i> contains the digits 
	    1 to 9 exactly once.</string>
	
	<string name="new_game_title">Difficulty</string>
	<string name="easy_lable">Easy</string>
	<string name="medium_lable">Medium</string>
	<string name="hard_lable">Hard</string>
	
	<string name="game_title">Game</string>
	<string name="no_moves_label">No moves</string>
	<string name="keypad_title">Keypad</string>
	
	<string name="keypad_one">1</string>
	<string name="keypad_two">2</string>
	<string name="keypad_three">3</string>
	<string name="keypad_four">4</string>
	<string name="keypad_five">5</string>
	<string name="keypad_six">6</string>
	<string name="keypad_seven">7</string>
	<string name="keypad_eight">8</string>
	<string name="keypad_nine">9</string>
	
	<string name="settings_label"> Settings&#8230;</string>
	<string name="settings_title">My Sudoku Settings</string>
	<string name="settings_shortcut">s</string>
	<string name="music_title">Music</string>
	<string name="music_summary">Play background music</string>
	<string name="hints_title">Hints</string>
	<string name="hints_summary">Show hints during play</string>
	
</resources>
