<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/keypad"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:stretchColumns="*" >
    
    <TableRow>
        <Button android:id="@+id/keypad_1"
            android:text="@string/keypad_one"/>
        <Button android:id="@+id/keypad_2"
            android:text="@string/keypad_two"/>
        <Button android:id="@+id/keypad_3"
            android:text="@string/keypad_three"/>
    </TableRow>
    <TableRow>
        <Button android:id="@+id/keypad_4"
            android:text="@string/keypad_four"/>
        <Button android:id="@+id/keypad_5"
            android:text="@string/keypad_five"/>
        <Button android:id="@+id/keypad_6"
            android:text="@string/keypad_six"/>
    </TableRow>
    <TableRow>
        <Button android:id="@+id/keypad_7"
            android:text="@string/keypad_seven"/>
        <Button android:id="@+id/keypad_8"
            android:text="@string/keypad_eight"/>
        <Button android:id="@+id/keypad_9"
            android:text="@string/keypad_nine"/>
    </TableRow>
    

</TableLayout>
